--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <H1></H1>
+
+        
+        <div id="background">
+            <img src="foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
+        </div>
+
+    
 </body>
 </html>
