--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         
         <div id="background">
-            <img src="foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="./foto's/foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
 
     
