--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <H1></H1>
+   <header></header>
 
         
         <div id="background">
             <img src="./foto's/foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
         </div>
 
-    
+    <footer></footer>
 </body>
 </html>
