--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project</title>
-    <script src="./js/script.js"></script>
+    <title>Project</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>
-   <header></header>
+   <header>
+       <h1>Welkom bij Project</h1>
+       <nav>
+           <ul>
+               <li><a href="index.html"><H1>Home</H1></a></li>
+               <li><a href="#"><H1>Over Ons</H1></a></li>
+               <li><a href="#"><H1>Diensten</H1></a></li>
+               <li><a href="#"><H1>Contact</H1></a></li>
+               <li><a id="logout"><H1>loguit</H1></a></li>
+           </ul>
+       </nav>
+   </header>
 
-        
-        <div id="background">
-            <img src="./foto's/foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-
-    <footer></footer>
+   <div id="background">
+       <img src="./foto's/foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
+   </div>
 </body>
 </html>
