--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
            <ul>
                <li><a href="index.html"><H1>Home</H1></a></li>
                <li><a href="#"><H1>Over Ons</H1></a></li>
-               <li><a href="#"><H1>Diensten</H1></a></li>
-               <li><a href="#"><H1>Contact</H1></a></li>
+               <li><a href="#"><H1>game's</H1></a></li>
+               <li><a href="./html/contact.html"><H1>Contact</H1></a></li>
                <li><a id="logout"><H1>loguit</H1></a></li>
            </ul>
        </nav>
