--- a/html/contact.html
+++ b/html/contact.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container">
-        <h2>Inloggen</h2>
+        <h2>stuur je bericht</h2>
         <form id="loginForm">
             <label for="email">email:</label>
             <input type="text" id="email" name="email" placeholder="email" required>
@@ -18,7 +18,7 @@
             <label for="text">bericht aan customer suport:</label>
             <input type="text" id="bericht" name="bericht" placeholder="bericht" required>
 
-            <button type="submit">sent </button>
+            <button type="submit">sent</button>
         </form>
     </div>
 
