--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
    <header>
-       <h1>Welkom bij Project</h1>
+       <h1>Game Menu</h1>
        <nav>
            <ul>
-               <li><a href="index.html"><H1>Home</H1></a></li>
                <li><a href="#"><H1>Over Ons</H1></a></li>
                <li><a href="#"><H1>game's</H1></a></li>
                <li><a href="./html/contact.html"><H1>Contact</H1></a></li>
@@ -20,9 +19,5 @@
            </ul>
        </nav>
    </header>
-
-   <div id="background">
-       <img src="./foto's/foto.jpg" alt="3D-achtergrond" style="width: 100%; height: 100%; object-fit: cover;">
-   </div>
 </body>
 </html>
