--- a/html/contact.html
+++ b/html/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
     <link rel="stylesheet" href="./../css/contact.css">
     <script src="./../js/contact.js"></script>
 </head>
