--- a/html/contact.html
+++ b/html/contact.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
-    <link rel="stylesheet" href="./../css/contact.css">
-    <script src="./../js/contact.js"></script>
+    <link rel="stylesheet" href="/css/contact.css">
+    <script src="/js/contact.js"></script>
 </head>
 <body>
 
     <div class="container">
-        <h2>stuur je bericht</h2>
-        <form id="loginForm">
-            <label for="email">email:</label>
-            <input type="text" id="email" name="email" placeholder="email" required>
-
-            <label for="text">bericht aan customer suport:</label>
-            <input type="text" id="bericht" name="bericht" placeholder="bericht" required>
-
-            <button type="submit">sent</button>
+        <h2>Stuur je bericht</h2>
+        <form method="post" action="/php/contact.php">
+            <label for="email">E-mail:</label>
+            <input type="text" id="email" name="email" placeholder="E-mail" required>
+    
+            <label for="bericht">Bericht aan customer support:</label>
+            <textarea id="bericht" name="bericht" placeholder="Bericht" required></textarea>
+    
+            <button type="submit">Verzenden</button>
         </form>
     </div>
 
