--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <ul>
                <li><a href="/html/overons.html"><H1>Over Ons</H1></a></li>
                <li><a href="/html/gameinfo.html"><H1>game's</H1></a></li>
-               <li><a href="./html/contact.html"><H1>Contact</H1></a></li>
+               <li><a href="/html/contact.html"><H1>Contact</H1></a></li>
                <li><a id="logout"><H1>loguit</H1></a></li>
            </ul>
        </nav>
