--- a/html/contact.html
+++ b/html/contact.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
-    <link rel="stylesheet" href="/css/contact.css">
-    <script src="/js/contact.js"></script>
+    <link rel="stylesheet" href="./../css/contact.css">
+    <script src="./../js/contact.js"></script>
 </head>
 <body>
 
     <div class="container">
         <h2>Stuur je bericht</h2>
-        <form method="post" action="/php/contact.php">
+        <form method="post" action="./../php/contact.php">
             <label for="email">E-mail:</label>
             <input type="text" id="email" name="email" placeholder="E-mail" required>
     
