--- a/html/gameinfo.html
+++ b/html/gameinfo.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>gameinfo</title>
-    <link rel="stylesheet" href="/css/gameinfo.css">
-    <script src="/js/gameinfo.js"></script>
+    <link rel="stylesheet" href="./../css/gameinfo.css">
+    <script src="./../js/gameinfo.js"></script>
 </head>
 <body>
     <h1>Mijn Afbeeldingen</h1>
