--- a/html/login.html
+++ b/html/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Inlogpagina</title>
-    <script src="/js/login.js"></script>
-    <link rel="stylesheet" href="/css/login.css">
+    <script src="./../js/login.js"></script>
+    <link rel="stylesheet" href="./../css/login.css">
 </head>
 <body>
     <div class="container">
