--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>
    <header>
        <h1>Game Menu</h1>
        <nav>
            <ul>
-               <li><a href="/html/overons.html"><H1>Over Ons</H1></a></li>
-               <li><a href="/html/gameinfo.html"><H1>game's</H1></a></li>
-               <li><a href="/html/contact.html"><H1>Contact</H1></a></li>
+               <li><a href="./html/overons.html"><H1>Over Ons</H1></a></li>
+               <li><a href="./html/gameinfo.html"><H1>game's</H1></a></li>
+               <li><a href="./html/contact.html"><H1>Contact</H1></a></li>
                <li><a id="logout"><H1>loguit</H1></a></li>
            </ul>
        </nav>
