--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <h2>Stuur je bericht</h2>
-        <form method="post" action="./../php/contact.php">
+        <form method="post">
             <label for="email">E-mail:</label>
             <input type="text" id="email" name="email" placeholder="E-mail" required>
     
