--- a/html/gameinfo.html
+++ b/html/gameinfo.html
@@ -38,6 +38,20 @@
             <p>Beschrijving van Afbeelding 6</p>
         </div>
 
+        <div class="card">
+            <img src="afbeelding7.jpg" alt="Afbeelding 7">
+            <p>Beschrijving van Afbeelding 7</p>
+        </div>
+
+        <div class="card">
+            <img src="afbeelding8.jpg" alt="Afbeelding 8">
+            <p>Beschrijving van Afbeelding 8</p>
+        </div>
+
+        <div class="card">
+            <img src="afbeelding9.jpg" alt="Afbeelding 9">
+            <p>Beschrijving van Afbeelding 9</p>
+        </div>
     </div>
 </body>
 </html>
