--- a/html/gameinfo.html
+++ b/html/gameinfo.html
@@ -6,7 +6,7 @@
     <script src="./../js/gameinfo.js"></script>
 </head>
 <body>
-    <h1>Mijn Afbeeldingen</h1>
+    <h1>alle game's</h1>
     <div class="card-container">
         <div class="card">
             <img src="afbeelding1.jpg" alt="Afbeelding 1">
